Adicao do estilo na foto

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/abel.jpg" alt="..." style="height: 18%;width:18%"  />
+                <img class="masthead-avatar mb-5" src="assets/img/abel.jpg" alt="..." style="height: 18%;width: 18%; border-radius: 70%; "  />
                 <!-- Masthead Heading-->
                 <!--  -->
                 <h1 class="masthead-heading text-uppercase mb-0">Abel Cumbane</h1>
