chore:Adicao do botao baixar

--- a/index.html
+++ b/index.html
@@ -50,13 +50,20 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0"> Web Developer</p>
+                <!-- //Cv session -->
+                <div class="text-center mt-4">
+                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
+                        <i class="fas fa-download me-2"></i>
+                        Baixar CV!
+                    </a>
+                </div>
             </div>
         </header>
         <!-- Portfolio Section-->
         <section class="page-section portfolio" id="portfolio">
             <div class="container">
                 <!-- Portfolio Section Heading-->
-                <h3 class="page-section-heading text-center text-uppercase text-secondary mb-0">Alguns projectos ou Empresas de luxo que tive o privilegio de colaborar</h3>
+                <h6 class="page-section-heading text-center text-secondary mb-0">Alguns projectos ou Empresas de luxo que tive o privilegio de colaborar</h6>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -126,7 +133,7 @@
         <section class="page-section bg-primary text-white mb-0" id="about">
             <div class="container">
                 <!-- About Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-white">Sobre</h2>
+                <h4 class="page-section-heading text-center text-uppercase text-white">Sobre</h4>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -246,6 +253,7 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Minhas Redes Sociais</h4>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/abelrosacumbane/" target="_blank"><i class="fa-brands fa-github"></i></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/abelrosacumbane/" target="_blank"><i class="fab fa-fw fa-instagram"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/abelrosac" target="_blank"><i class="fab fa-fw fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/abel-rosa-cumbane-264a0622a/" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
