--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <p class="masthead-subheading font-weight-light mb-0"> Web Developer</p>
                 <!-- //Cv session -->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
+                    <a class="btn btn-xl btn-outline-light" href="https://github.com/abelcumbane/portifolio/files/9158978/CV_Abel.pdf">
                         <i class="fas fa-download me-2"></i>
                         Baixar CV!
                     </a>
