Anexo de link de github

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Minhas Redes Sociais</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/abelrosacumbane/" target="_blank"><i class="fa-brands fa-github"></i></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/abelcumbane" target="_blank"><i class="fa-brands fa-github"></i></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/abelrosacumbane/" target="_blank"><i class="fab fa-fw fa-instagram"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/abelrosac" target="_blank"><i class="fab fa-fw fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/abel-rosa-cumbane-264a0622a/" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
